align left - text-vertical align fix

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -8,8 +8,9 @@
   background-color: $green;
   border-radius: 36px;
   color: $white;
-  padding: 7px 20px;
+  padding: 6px 19px 9px;
   text-align: center;
+  margin-left: -2px;
 }
 
 .a-homepage {
